Normalize newline characters in JS dialogs.

BUG=887925
TEST=WebContentsImplBrowserTest.JavaScriptDialogsNormalizeText

Change-Id: Ibea163e5cc8822c427d2278717b5d1c8316d6be4
Reviewed-on: https://chromium-review.googlesource.com/1243226
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594008}
Former-commit-id: 4891b851ad47d76b8504e8ca977d72f09543662a